kubernetes/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: gateway

spec:
  replicas: 2

  selector:
    matchLabels:
      app: gateway

  template:
    metadata:
      labels:
        app: gateway

    spec:
      containers:
        - name: gateway

          image: deepakraj172004/gateway:v1

          ports:
            - containerPort: 5000
