kubernetes/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hospital-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 5000
